# 2048.cpp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  game.hpp  global.hpp  main.cpp  scores.hpp
